line-smt-apis/force-app/main/default/objects/CarTestRoute__c.object
<CustomObject>
    <fields>
        <fullName>CarTestRouteType__c</fullName>
        <label>試駕路線類型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>市區道路</fullName>
                </value>
                <value>
                    <fullName>山區道路</fullName>
                </value>
                <value>
                    <fullName>高速道路</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>經銷商</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>試駕路線</relationshipLabel>
        <relationshipName>CarTestRouteToDealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DrivingDistance__c</fullName>
        <label>距離</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrivingTime__c</fullName>
        <label>車程</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleMapLink__c</fullName>
        <label>GoogleMap連結</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RouteDescription__c</fullName>
        <label>路線說明</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TestDriveExperienceProject__c</fullName>
        <label>試駕體驗項目</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>試駕路線</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>CarTestRouteType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>試駕路線編號</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>