line-smt-apis/force-app/main/default/objects/CarTestRoute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer__c</columns>
    <columns>CarTestRouteType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>